# Rredis

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  skills-lock.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: main.cpp
src/block_manager/: blocking_manager.cpp  blocking_manager.hpp
src/cli/: cli_parser.hpp
src/event_loop/: event_loop.cpp  event_loop.hpp
src/geo/: geo_score.hpp
src/handler/: command_handler.cpp  command_handler.hpp
src/protocol/: resp_parser.cpp  resp_parser.hpp  stream_entry.hpp  stream_id.hpp
src/pubsub/: pubsub_manager.hpp
src/rdb/: rdb_constants.hpp
src/replica/: replica_connector.cpp  replica_connector.hpp
src/server/: acl_manager.hpp  server_config.hpp  server_runner.cpp  server_runner.hpp
src/store/: store.cpp  store.hpp
src/util/: sha256.cpp  sha256.hpp  string_hash.hpp
tests/: CMakeLists.txt  test_acl.cpp  test_cli_parser.cpp  test_command_propagation.cpp  test_config_get.cpp  test_exec.cpp  test_geoadd.cpp  test_incr.cpp  test_info.cpp  test_multi.cpp  test_replica_command_processing.cpp  test_replica_handshake.cpp  test_replicaof.cpp  test_subscribe.cpp  test_wait.cpp  test_watch.cpp  test_xread.cpp  test_xread_block.cpp  test_xread_dollar_id.cpp  test_zcard.cpp  test_zrange.cpp  test_zrank.cpp  test_zrem.cpp  test_zscore.cpp
